<resources>
    <string name="app_name">Simple Calculator</string>
    <string name="textView">textView</string>
    <string name="memoryButton">M</string>
    <string name="memoryAddButton">M+</string>
    <string name="memoryMinusButton">M-</string>
    <string name="negativeSignButton">+/-</string>
    <string name="clearButton">Clear</string>
    <string name="deleteButton">Delete</string>
    <string name="leftParanthesButton">(</string>
    <string name="rightParanthesButton">)</string>
    <string name="sevenButton">7</string>
    <string name="eightButton">8</string>
    <string name="nineButton">9</string>
    <string name="divisionButton">/</string>
    <string name="fourButton">4</string>
    <string name="fiveButton">5</string>
    <string name="sixButton">6</string>
    <string name="multiplyButton">*</string>
    <string name="oneButton">1</string>
    <string name="twoButton">2</string>
    <string name="threeButton">3</string>
    <string name="minusButton">-</string>
    <string name="dotButton">.</string>
    <string name="zeroButton">0</string>
    <string name="equalsButton">=</string>
    <string name="plusButton">+</string>
    <string name="emptyString"></string>



</resources>
