<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/backgroundColor"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="bottom|right"
            android:hint="0"
            android:maxLength="18"
            android:textColorHint="@color/textColor"
            android:textSize="40sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linearlayout8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:weightSum="6">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/memoryButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="0.5dp"
                    android:layout_weight="1"
                    android:background="@color/buttonsColor"
                    android:text="@string/memoryButton"
                    android:textColor="@color/textColor" />

                <Button
                    android:id="@+id/memoryAddButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="0.5dp"
                    android:layout_weight="1"
                    android:background="@color/buttonsColor"
                    android:text="@string/memoryAddButton"
                    android:textColor="@color/textColor" />

                <Button
                    android:id="@+id/memoryMinusButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="0.5dp"
                    android:layout_weight="1"
                    android:background="@color/buttonsColor"
                    android:text="@string/memoryMinusButton"
                    android:textColor="@color/textColor" />

                <Button
                    android:id="@+id/negativeSignButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/buttonsColor"
                    android:text="@string/negativeSignButton"
                    android:textColor="@color/textColor" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/clrButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="0.5dp"
                    android:layout_marginRight="0.5dp"
                    android:layout_weight="1"
                    android:background="@color/buttonsColor"
                    android:text="@string/clearButton"
                    android:textColor="@color/textColor" />

                <Button
                    android:id="@+id/delButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="0.5dp"
                    android:layout_marginTop="0.5dp"
                    android:layout_weight="1"
                    android:background="@color/buttonsColor"
                    android:text="@string/deleteButton"
                    android:textColor="@color/textColor" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/sevenButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="0.5dp"
                    android:layout_marginRight="0.5dp"
                    android:layout_weight="1"
                    android:background="@color/buttonsColor"
                    android:text="@string/sevenButton"
                    android:textColor="@color/textColor" />

                <Button
                    android:id="@+id/eightButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="0.5dp"
                    android:layout_marginRight="0.5dp"
                    android:layout_weight="1"
                    android:background="@color/buttonsColor"
                    android:text="@string/eightButton"
                    android:textColor="@color/textColor" />

                <Button
                    android:id="@+id/nineButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="0.5dp"
                    android:layout_marginRight="0.5dp"
                    android:layout_weight="1"
                    android:background="@color/buttonsColor"
                    android:text="@string/nineButton"
                    android:textColor="@color/textColor" />

                <Button
                    android:id="@+id/divisionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="0.5dp"
                    android:layout_marginRight="0.5dp"
                    android:layout_weight="1"
                    android:background="@color/buttonsColor"
                    android:text="@string/divisionButton"
                    android:textColor="@color/textColor" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/fourButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="0.5dp"
                    android:layout_marginRight="0.5dp"
                    android:layout_weight="1"
                    android:background="@color/buttonsColor"
                    android:text="@string/fourButton"
                    android:textColor="@color/textColor" />

                <Button
                    android:id="@+id/fiveButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="0.5dp"
                    android:layout_marginRight="0.5dp"
                    android:layout_weight="1"
                    android:background="@color/buttonsColor"
                    android:text="@string/fiveButton"
                    android:textColor="@color/textColor" />

                <Button
                    android:id="@+id/sixButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="0.5dp"
                    android:layout_marginRight="0.5dp"
                    android:layout_weight="1"
                    android:background="@color/buttonsColor"
                    android:text="@string/sixButton"
                    android:textColor="@color/textColor" />

                <Button
                    android:id="@+id/multiplyButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="0.5dp"
                    android:layout_marginRight="0.5dp"
                    android:layout_weight="1"
                    android:background="@color/buttonsColor"
                    android:text="@string/multiplyButton"
                    android:textColor="@color/textColor" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/oneButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="0.5dp"
                    android:layout_marginRight="0.5dp"
                    android:layout_weight="1"
                    android:background="@color/buttonsColor"
                    android:text="@string/oneButton"
                    android:textColor="@color/textColor" />

                <Button
                    android:id="@+id/twoButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="0.5dp"
                    android:layout_marginRight="0.5dp"
                    android:layout_weight="1"
                    android:background="@color/buttonsColor"
                    android:text="@string/twoButton"
                    android:textColor="@color/textColor" />

                <Button
                    android:id="@+id/threeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="0.5dp"
                    android:layout_marginRight="0.5dp"
                    android:layout_weight="1"
                    android:background="@color/buttonsColor"
                    android:text="@string/threeButton"
                    android:textColor="@color/textColor" />

                <Button
                    android:id="@+id/minusButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="0.5dp"
                    android:layout_marginRight="0.5dp"
                    android:layout_weight="1"
                    android:background="@color/buttonsColor"
                    android:text="@string/minusButton"
                    android:textColor="@color/textColor" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/dotButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="0.5dp"
                    android:layout_marginRight="0.5dp"
                    android:layout_weight="1"
                    android:background="@color/buttonsColor"
                    android:text="@string/dotButton"
                    android:textColor="@color/textColor" />

                <Button
                    android:id="@+id/zeroButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="0.5dp"
                    android:layout_marginRight="0.5dp"
                    android:layout_weight="1"
                    android:background="@color/buttonsColor"
                    android:text="@string/zeroButton"
                    android:textColor="@color/textColor" />

                <Button
                    android:id="@+id/equalButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="0.5dp"
                    android:layout_marginRight="0.5dp"
                    android:layout_weight="1"
                    android:background="@color/buttonsColor"
                    android:text="@string/equalsButton"
                    android:textColor="@color/textColor" />

                <Button
                    android:id="@+id/plusButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="0.5dp"
                    android:layout_marginRight="0.5dp"
                    android:layout_weight="1"
                    android:background="@color/buttonsColor"
                    android:text="@string/plusButton"
                    android:textColor="@color/textColor" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>